# image-optimizer

./: LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: DropZone.tsx  ProgressPanel.tsx  SettingsPanel.tsx  TitleBar.tsx
src/components/ui/: progress.tsx
