[package]
name = "Optisnap"
version = "0.1.0"
description = "A bulk image optimizer application that enables users to bulk optimize images by reducing file sizes, converting between formats like PNG, WebP, TIFF, BMP, and QOI, and applying advanced compression techniques for efficient storage and faster loading."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bulk_image_optimizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Image processing
image = { version = "0.25", features = ["png", "webp", "tiff", "bmp", "qoi"] }
webp = "0.3"
qoi = "0.4"
imagequant = "4.3" # pngquant algorithm for lossy PNG compression
oxipng = "9.1" # Additional PNG optimization
png = "0.17" # PNG encoding for quantized images

